[workspace]
resolver = "2"

members = [
    # Library crates (mirrors lib/)
    "libs/ogs-core",
    "libs/ogs-crypt",
    "libs/ogs-asn1c",
    "libs/ogs-gtp",
    "libs/ogs-pfcp",
    "libs/ogs-nas",
    "libs/ogs-sbi",
    "libs/ogs-diameter",
    "libs/ogs-sctp",
    "libs/ogs-ngap",
    "libs/ogs-s1ap",
    "libs/ogs-dbi",
    "libs/ogs-app",
    "libs/ogs-metrics",
    "libs/ogs-proto",
    "libs/ogs-ipfw",
    "libs/ogs-tun",
    "libs/ogs-ffi",
    
    # Binary crates (mirrors src/)
    "bins/nextgcore-amfd",
    "bins/nextgcore-ausfd",
    "bins/nextgcore-bsfd",
    "bins/nextgcore-hssd",
    "bins/nextgcore-mmed",
    "bins/nextgcore-nrfd",
    "bins/nextgcore-nssfd",
    "bins/nextgcore-pcfd",
    "bins/nextgcore-pcrfd",
    "bins/nextgcore-scpd",
    "bins/nextgcore-seppd",
    "bins/nextgcore-sgwcd",
    "bins/nextgcore-sgwud",
    "bins/nextgcore-smfd",
    "bins/nextgcore-udmd",
    "bins/nextgcore-udrd",
    "bins/nextgcore-upfd",

    # Rel-17 NFs
    "bins/nextgcore-mbsmfd",
    "bins/nextgcore-nsacfd",

    # Integration tests
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NextGCore Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/nextgcore/nextgcore"
description = "NextGCore 5G/LTE Core Network - Rust Implementation"

[workspace.dependencies]
# Core dependencies
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
bitflags = "2.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Networking
socket2 = "0.5"
libc = "0.2"

# HTTP/2 for SBI
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
h2 = "0.4"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
webpki-roots = "0.26"

# Database
mongodb = { version = "2.8", default-features = false, features = ["sync"] }

# Cryptography - using existing Rust crates where available
aes = "0.8"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
cmac = "0.7"
hkdf = "0.12"
zuc = "0.1"                    # ZUC cipher (3GPP EEA3/EIA3)
p256 = "0.13"                  # NIST P-256 elliptic curve
elliptic-curve = "0.13"        # Generic elliptic curve traits
base64 = "0.22"
hex = "0.4"                    # Hex encoding/decoding

# ASN.1 codec - using rasn for PER encoding
rasn = "0.18"
rasn-derive = "0.18"

# Protocol libraries - using existing Rust crates where available
diameter-rs = "0.5"            # Diameter protocol (AAA)

# Pure Rust SCTP (userspace over UDP - no C dependencies)
sctp-proto = "0.6"             # SCTP protocol (same as nextgsim for wire compatibility)

# FFI and bindgen (optional - only for C interop testing)
bindgen = "0.69"

# Testing
proptest = "1.4"
hex-literal = "0.4"

# Metrics
prometheus = "0.13"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.9"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Internal crates
ogs-core = { path = "libs/ogs-core" }
ogs-crypt = { path = "libs/ogs-crypt" }
ogs-asn1c = { path = "libs/ogs-asn1c" }
ogs-gtp = { path = "libs/ogs-gtp" }
ogs-pfcp = { path = "libs/ogs-pfcp" }
ogs-nas = { path = "libs/ogs-nas" }
ogs-sbi = { path = "libs/ogs-sbi" }
ogs-diameter = { path = "libs/ogs-diameter" }
ogs-sctp = { path = "libs/ogs-sctp" }
ogs-ngap = { path = "libs/ogs-ngap" }
ogs-s1ap = { path = "libs/ogs-s1ap" }
ogs-dbi = { path = "libs/ogs-dbi" }
ogs-app = { path = "libs/ogs-app" }
ogs-metrics = { path = "libs/ogs-metrics" }
ogs-proto = { path = "libs/ogs-proto" }
ogs-ipfw = { path = "libs/ogs-ipfw" }
ogs-tun = { path = "libs/ogs-tun" }
ogs-ffi = { path = "libs/ogs-ffi" }

# Workspace-wide lint configuration
# 3GPP protocol implementations naturally have many parameters and complex types.
[workspace.lints.clippy]
# Protocol implementations naturally have many parameters and complex types
too_many_arguments = "allow"
type_complexity = "allow"
# Protocol codecs use specific initialization and construction patterns
field_reassign_with_default = "allow"
vec_init_then_push = "allow"
# ASN.1 codecs use transmute for type punning
missing_transmute_annotations = "allow"
# Build scripts use PathBuf parameters
ptr_arg = "allow"
# Protocol methods may shadow std trait names (from_str, next, default)
should_implement_trait = "allow"
# Protocol enums may have common prefixes
enum_variant_names = "allow"
# Iterator patterns in low-level codec/crypto code
needless_range_loop = "allow"
# Manual prefix stripping in protocol parsers
manual_strip = "allow"
# Some match arms have identical fallthrough behavior
if_same_then_else = "allow"
# Protocol drop patterns
drop_non_drop = "allow"
# Collapsible match/if patterns in state machines
collapsible_match = "allow"

[workspace.lints.rust]
# SCTP feature flag used in conditional compilation
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("sctp"))'] }
# Future-use code for Rel-17/18/20 features
dead_code = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
