[package]
name = "nextgcore-scpd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore SCP (Service Communication Proxy)"

[[bin]]
name = "nextgcore-scpd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-sbi = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"

[dev-dependencies]
proptest.workspace = true
