[package]
name = "ogs-s1ap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore S1AP Protocol Library"

[dependencies]
ogs-core = { workspace = true }
ogs-asn1c = { workspace = true }
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
proptest.workspace = true
