[package]
name = "nextgcore-amfd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore AMF (Access and Mobility Management Function)"

[[bin]]
name = "nextgcore-amfd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-crypt = { workspace = true }
ogs-nas = { workspace = true }
ogs-ngap = { workspace = true }
ogs-sbi = { workspace = true }
ogs-sctp = { workspace = true }
ogs-app = { workspace = true }
ogs-metrics = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml = { workspace = true }
uuid.workspace = true
clap.workspace = true
ctrlc.workspace = true
sha2 = "0.10"
bytes = "1.5"
once_cell = "1.19"
base64.workspace = true
hex.workspace = true
# Proper ASN.1 NGAP encoding from nextgsim
nextgsim-ngap = { path = "../../../../nextgsim/nextgsim-ngap" }
bitvec = "1"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
