[package]
name = "nextgcore-ausfd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore AUSF (Authentication Server Function)"

[lib]
name = "nextgcore_ausfd"
path = "src/lib.rs"

[[bin]]
name = "nextgcore-ausfd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-crypt = { workspace = true }
ogs-sbi = { workspace = true }
ogs-metrics = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
uuid.workspace = true
clap.workspace = true
ctrlc.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
