[package]
name = "nextgcore-mbsmfd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore MB-SMF (Multicast/Broadcast Session Management Function, TS 23.247)"

[[bin]]
name = "nextgcore-mbsmfd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-sbi = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid = { version = "1.6", features = ["v4"] }
hex.workspace = true
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
