[package]
name = "nextgcore-mbsmfd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore MB-SMF (Multicast/Broadcast Session Management Function, TS 23.247)"

[[bin]]
name = "nextgcore-mbsmfd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-sbi = { workspace = true }
ogs-metrics = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
hex.workspace = true
clap.workspace = true
ctrlc.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
