[package]
name = "nextgcore-mmed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore MME (Mobility Management Entity)"

[[bin]]
name = "nextgcore-mmed"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-crypt = { workspace = true }
ogs-nas = { workspace = true }
ogs-s1ap = { workspace = true }
ogs-gtp = { workspace = true }
ogs-diameter = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
