[package]
name = "nextgcore-nwdafd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore NWDAF (Network Data Analytics Function, TS 23.288)"

[[bin]]
name = "nextgcore-nwdafd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-sbi = { workspace = true }
ogs-metrics = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
clap.workspace = true
ctrlc.workspace = true
chrono = "0.4"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
