[package]
name = "nextgcore-pcfd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore PCF (Policy Control Function)"

[[bin]]
name = "nextgcore-pcfd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-sbi = { workspace = true }
ogs-dbi = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
