[package]
name = "nextgcore-seppd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore SEPP (Security Edge Protection Proxy)"

[[bin]]
name = "nextgcore-seppd"
path = "src/main.rs"

[lib]
name = "nextgcore_seppd"
path = "src/lib.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-sbi = { workspace = true }
ogs-metrics = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
