[package]
name = "nextgcore-sgwcd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore SGWC (Serving Gateway Control Plane)"

[[bin]]
name = "nextgcore-sgwcd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-gtp = { workspace = true }
ogs-pfcp = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
