[package]
name = "nextgcore-udmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NextGCore UDM (Unified Data Management)"

[[bin]]
name = "nextgcore-udmd"
path = "src/main.rs"

[dependencies]
ogs-core = { workspace = true }
ogs-crypt = { workspace = true }
ogs-sbi = { workspace = true }
ogs-metrics = { workspace = true }
ogs-dbi = { workspace = true }
ogs-app = { workspace = true }
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
clap.workspace = true
ctrlc.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
